--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 *.rar
 
 sudoku-club/.idea
+sudoku-club/target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
