--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 *.tar.gz
 *.rar
 
-sudoku-club/.idea
-sudoku-club/target
+**.idea
+**/target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
