--- a/sudoku-club/pom.xml
+++ b/sudoku-club/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>org.sudokuclub</groupId>
     <artifactId>sudoku-club</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>sudoku-club</name>
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.sudokuclub/com.example.sudokuclub.HelloApplication</mainClass>
+                            <mainClass>org.sudokuclub/org.sudokuclub.App</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
