--- a/sudoku-club/src/main/resources/log4j2.properties
+++ b/sudoku-club/src/main/resources/log4j2.properties
@@ -1,5 +1,7 @@
 status=ERROR
 appender.console.type=Console
 appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 rootLogger.level=TRACE
 rootLogger.appenderRef.stdout.ref=STDOUT
